--- a/index.html
+++ b/index.html
@@ -5,29 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;0,400;0,600;0&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Equilibrium #3429
 
-  Our Equilibrium collection promotes balance and calm.
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+
+  <div class="card">
+    <a href="images/image-equilibrium.jpg">
+      <img class="card-img" src="images/image-equilibrium.jpg" alt="Equilibrium #3429">
+    </a>
+    <div class="card-content">
+      <h2><span>Equilibrium #3429</span></h2>
+      <p>Our Equilibrium collection promotes balance and calm.</p>
+      <div class="trade-value">
+        <div class="ethirium-value">
+          <img src="images/icon-ethereum.svg" alt="Ethereum icon">
+          <h3><span>0.041 ETH</span></h3>
+        </div>
+        <div class="time-left">
+          <img src="images/icon-clock.svg" alt="">
+          <h3>3 days left</h3>
+        </div>
+      </div>
+      <hr>
+      <div class="creator">
+        <img class="avatar-img" src="images/image-avatar.png" alt="Jules Wyvern">
+        <p>Creation of <span>Jules Wyvern</span></p>
+      </div>  
+    </div>
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Marcos Galdamez</a>.
   </div>
 </body>
 </html>
